# larabot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  mix.exs  rustfmt.toml
i18n/bg/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/cs/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/da/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/de/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/el/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/en-GB/: error-response.ftl  support-server-button.ftl
i18n/en-US/: feedback-command.ftl
i18n/es-419/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/es-ES/: error-response.ftl  feedback-command.ftl
i18n/fi/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/fr/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/hi/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/hr/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/hu/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/id/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/it/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/ja/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/ko/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/lt/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/nl/: error-response.ftl  feedback-command.ftl
i18n/no/: error-response.ftl  feedback-command.ftl
i18n/pl/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/pt-BR/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/ro/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/ru/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/sv-SE/: error-response.ftl  feedback-command.ftl
i18n/th/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/tr/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/uk/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/vi/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/zh-CN/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
i18n/zh-TW/: error-response.ftl  feedback-command.ftl  support-server-button.ftl
lib/: color.ex  component.ex  consumer.ex  error.ex  interaction.ex  interaction_response.ex  interactions.ex  schedule.ex
lib/interaction/: help.ex
src/: color.rs  event.rs  interaction.rs  lib.rs  localization.rs  option_ext.rs  sentry_user_feedback.rs  tracing.rs
src/interaction/: button.rs  error_response.rs  feedback.rs
src/interaction/feedback/: button.rs  command.rs  modal.rs
