[package]
name = "larabot"
edition = "2021"
authors = ["Lara Kayaalp <me@lara.lv>"]
license = "MIT"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
keyword_idents = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
absolute_paths = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
exhaustive_structs = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
multiple_inherent_impl = "allow"
non_ascii_literal = "allow"
partial_pub_fields = "allow"
print_stderr = "allow"
print_stdout = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
wildcard_enum_match_arm = "allow"

[dependencies]
#anyhow = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
#twilight-http = { version = "0.15", default-features = false }
#twilight-model = "0.15"
#twilight-util = { version = "0.15", features = ["builder"] }
#sqlx = { version = "0.7", default-features = false, features = ["any", "macros"] }
